--- a/css/pagina.css
+++ b/css/pagina.css
@@ -29,25 +29,21 @@ header
 
 .title
 {
-	height: 100px;
-	font-size: 65px;
+	height: 70px;
+	font-size: 50px;
 	font-family: 'Pacifico', cursive;
-	/*font-family: 'Satisfy', cursive;*/
 	color: #FF5252;
 	text-align: left;
-	/*background-image: url('../images/logo.png');
-	background-repeat: no-repeat;*/
-	background-color: rgba(255, 255, 255, 0.2);
-	border-bottom: 1px solid lightgray;
+	background-color:#F6F6F6;
 }
 
 .menu
 {
-	height: 40px;
+	height: 20px;
 	font-size: 18px;
 	text-align: right;
 	float: right;
-	margin-top: 40px;
+	margin-top: 0px;
 	margin-right: 15px; 
 }
 
@@ -66,7 +62,6 @@ li {
 	font-size: 16px;
 	font-family: 'Raleway', sans-serif;
 	font-weight: bold;
-	/*color: rgb(240,128,128);*/
 	color: #F57D68;
 	padding-left: 10px;
 }
@@ -118,7 +113,6 @@ form
 	width: 400px; 
 	padding: 15px;
 	float: center;
-	/*background-color: rgba(255, 255, 255, 0.95);*/
 	font-family: 'Roboto', sans-serif;
 	font-size: 15px;
 	color: rgba(28, 28, 28, 0.8);
@@ -234,18 +228,14 @@ table
 {
 	width: 450px;
 	float: left;	
-	/*border: 1px solid rgb(255, 255, 255);*/
 	font-family: 'Roboto', sans-serif;
-	/*border-radius: 2px;*/
 }
 
 td, th
 {
 	width: 50px;
-	/*border: 1px solid rgb(255, 255, 255);*/
 	text-align: center;
 	color: white;
-	/*border-radius: 2px;*/
 	padding: 5px;
 	
 }
