Estado das tarefas removidos

--- a/css/pagina.css
+++ b/css/pagina.css
@@ -16,7 +16,6 @@ html
 {
 	background: url("../images/fundo_login6.jpeg");
 	background-size: 100%;
-	margin: 0 auto;
 	position: relative;
 }
 
@@ -123,6 +122,7 @@ form
 	width: 222px;
 	padding: 5px;
 	margin: 5px;
+	margin-bottom: 20px;
 	float: left;
 }
 
@@ -219,16 +219,16 @@ div p
 {
 	width: 100%;
 	height: 400px;
-	overflow: auto scroll; 
-	float: right;
+	overflow: auto scroll;
+	float: center;
 	margin: 0 auto;
 }
 
-table
+.feito
 {
-	width: 450px;
-	float: left;	
+	width: 750px;	
 	font-family: 'Roboto', sans-serif;
+	margin: 0 auto;
 }
 
 td, th
@@ -243,6 +243,7 @@ td, th
 .feito td
 {
 	background-color: rgba(140, 185, 80, 0.6);
+	height: 40px;
 }
 
 .feito th
@@ -250,25 +251,6 @@ td, th
 	background-color: rgb(140, 185, 80);
 }
 
-.emAndamento td
-{
-	background-color: rgba(231, 204, 82, 0.623);
-}
-
-.emAndamento th
-{
-	background-color: rgb(231, 204, 82);
-}
-
-.stuck td
-{
-	background-color: rgba(244, 110, 88, 0.6);
-}
-
-.stuck th
-{
-	background-color: rgb(244, 110, 88);
-}
 
 /* settings */
 
