--- a/css/pagina.css
+++ b/css/pagina.css
@@ -33,7 +33,9 @@ header
 	font-family: 'Pacifico', cursive;
 	color: #FF5252;
 	text-align: left;
-	background-color:#F6F6F6;
+	/*background-color:#F6F6F6;*/
+	background-color: rgba(255, 255, 255, 0.7);
+	border-bottom: 1px solid rgba(189, 191, 181, 0.4);;
 }
 
 .menu
@@ -242,13 +244,14 @@ td, th
 
 .feito td
 {
-	background-color: rgba(140, 185, 80, 0.6);
+	/*background-color: rgba(140, 185, 80, 0.6);*/
+	background-color: rgba(189, 191, 181, 0.7);
 	height: 40px;
 }
 
 .feito th
 {
-	background-color: rgb(140, 185, 80);
+	background-color: rgb(180, 182, 173);
 }
 
 
@@ -261,4 +264,11 @@ td, th
 	float: left;
 	margin-top: 40px;
 	display: block;
+}
+
+.lixo 
+{
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
 }
