--- a/css/pagina.css
+++ b/css/pagina.css
@@ -28,8 +28,8 @@ header
 
 .title
 {
-	height: 50px;
-	font-size: 30px;
+	height: .60px;
+	font-size: 40px;
 	font-family: 'Pacifico', cursive;
 	color: #FF5252;
 	text-align: left;
